# telliot-feeds

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  ape-config.yml  brownie-config.yaml  brownie-config.yml  docker-compose.yml  get_default_configs.py  hardhat.config.js  index.html  kraken_eth_usd_historical_price_source.csv  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.sh  sitemap.xml  testDelete.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: support-for-new-query-type.md
.github/workflows/: docs.yml  py312.yml  py38.yml  py39.yml  release.yml  style.yml  typing.yml
add-chain/: index.html
add-spot-price/: index.html
code/datafeed/: index.html
code/dtypes/: index.html
code/query-base-classes/: index.html
code/query-catalog/: index.html
code/query-types/: index.html
contracts/: TellorFlex.sol
contracts/SampleReporterContract/: SampleFlexReporter.sol  SampleXReporter.sol
contracts/Tellor/: Autopay.sol  Governance.sol  QueryDataStorage.sol  TellorFlex.sol  TellorPlayground.sol  UsingTellor.sol
contracts/TellorFlex/: Autopay.sol  QueryDataStorage.sol  TellorFlex.sol  TellorFlex360.sol  TellorPlayground.sol  UsingTellor.sol
contracts/TellorX/: TellorXMasterMock.sol  TellorXOracleMock.sol
contracts/integrations/: DIVAProtocolMock.sol  DIVATellorOracleMock.sol
contracts/interfaces/: IMappingContract.sol
contributing/: index.html
docs/: add-chain.md  add-new-query-type.md  add-spot-price.md  aws-linux-2-setup.md  contributing.md  docker-install.md  documentation.md  getting-started.md  index.md  new-query.md  new-release.md  ubuntu-setup.md  usage.md
docs/code/: datafeed.md  dtypes.md  query-base-classes.md  query-catalog.md  query-types.md
docs/examples/: legacy_query_example.md  spot_price_query_example.md  text_query_example.md
documentation/: index.html
evn/: pyvenv.cfg
examples/: fileCID_query_example.py  gripDynoChallenge.py  legacy_query_example.py  snapshot_query_example.py  spot_price_query_example.py  text_query_example.py
examples/legacy_query_example/: index.html
examples/spot_price_query_example/: index.html
examples/text_query_example/: index.html
flashbots_examples/: eip1559.py  reporter.py
getting-started/: index.html
interfaces/: IERC20.sol  IERC2362.sol  IOracle.sol  IQueryDataStorage.sol  ITellor.sol
new-query/: index.html
new-release/: index.html
proof_of_reserves/: prove_reserves.js
proof_of_reserves/contract_info/: DLCManager.json
scripts/: abi.py  aerodrome.py  flashbots_eip1559.py  flashbots_testnet_report.py  generate_price_history_csv.py  get_binance_tickers.py  get_bitlyer_tickers.py  get_default_configs.py  report_id_10.sh  report_id_41.sh  report_usd_vwap.py  report_uspce.py  setup.sh  submit_polygon_testnet.py  wampl_report_once.py
search/: search_index.json
src/: conftest.py
src/telliot_ampl_feeds/: __init__.py  config.py  reporter.py
src/telliot_feed_examples/: __init__.py  cli.py  datafeed.py  datasource.py  olympus.py  report_with_flashbots.py
src/telliot_feeds/: __init__.py  constants.py  datafeed.py  datasource.py
tenv/: vyper_git_commithash.txt
tests/: conftest.py  contract_helpers.py  test_api.py  test_autopay.py  test_bct_usd.py  test_cli.py  test_dai_usd.py  test_data_feed.py  test_data_source.py  test_diva_protocol_report.py  test_examples.py  test_idle_usd.py  test_matic_usd.py  test_mkr_usd.py  test_numeric_api_response_feed.py  test_olympus.py  test_plugin.py  test_price_service.py  test_ric_usd.py  test_sushi_usd.py  test_usdc_usd.py  test_value_type.py  test_vesq.py
tests/cli/: test_cli.py  test_diva_cli.py  test_liquity_cli.py  test_query_cmd.py  test_stake_e2e_cmd.py  test_utils.py
tests/feeds/: __init__.py  test_aave_usd_feed.py  test_active_feeds.py  test_ampl_usd_vwap_feed.py  test_api_url_feed.py  test_atla_helper.py  test_atom_usd_feed.py  test_avax_usd_feed.py  test_badger_usd_feed.py  test_bch_usd_feed.py  test_bct_usd_feed.py  test_brl_usd_feed.py  test_btc_usd_feed.py  test_cbeth_usd_feed.py  test_cny_usd_feed.py  test_comp_usd_feed.py  test_crv_usd_feed.py  test_dai_usd_feed.py  test_diva_feed.py  test_diva_usd_feed.py  test_doge_usd_feed.py  test_dot_usd_feed.py  test_eth_btc_feed.py  test_eth_jpy_feed.py  test_eth_usd_feed.py  test_eth_usd_legacy.py  test_eth_usd_volatility_feed.py  test_eul_usd_feed.py  test_eur_usd_feed.py  test_ezeth_usd_feed.py  test_fbtc_usd_feed.py  test_fil_usd_feed.py  test_frax_usd_feed.py  test_frxeth_usd_feed.py  test_frxusd_usd_feed.py  test_gas_price_oracle_feed.py  test_grt_usd_feed.py  test_gyd_usd_feed.py  test_idle_usd_feed.py  test_king_usd_feed.py  (+77 more)
tests/funder/: test_base_funder.py
tests/queries/: test_abi_query.py  test_inflation_data_query.py  test_json_query.py  test_query_ampl_usd_vwap.py  test_query_apiquery.py  test_query_base.py  test_query_btc_balance.py  test_query_btc_balance_current.py  test_query_catalog.py  test_query_custom_price.py  test_query_daily_volatility.py  test_query_diva_protocol.py  test_query_diva_protocol_polygon.py  test_query_evm_balance.py  test_query_evm_call.py  test_query_fileCID.py  test_query_fileCID_query.py  test_query_gas_price_oracle.py  test_query_ipfsCID_query.py  test_query_legacy_ampl.py  test_query_legacy_query.py  test_query_mimicry.py  test_query_mimicry_mashup.py  test_query_mimicry_nft_index.py  test_query_morphware.py  test_query_numeric_api_response.py  test_query_snapshot.py  test_query_spot_price.py  test_query_string_query.py  test_query_support.py  test_query_tellor_addresses.py  test_query_tellor_rng.py  test_query_twap.py  test_query_uspce.py  test_string_query.py
tests/reporters/: __init__.py  test_360_reporter.py  test_360reporter.py  test_ampl_usd_vwap_reporter.py  test_autopay_multicalls.py  test_backup_reporter.py  test_conditional_reporter.py  test_custom_360_reporter.py  test_custom_contracts.py  test_custom_flex_reporter.py  test_custom_x_reporter.py  (+12 more)
usage/: index.html
(+752 files in other folders)
