[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=telliot_feeds
version = attr: telliot_feeds.__version__
author=Tellor Development Community
author_email=info@tellor.io
description= Tools for interacting with Tellor Protocol smart contracts.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/tellor-io/telliot-feeds
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: System :: Networking
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
license=MIT
keywords=
    oracle
    ethereum
    blockchain


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    tox
    tox-travis
install_requires =
    telliot-core >= 0.1.6
    python-dotenv
    multicall >= 0.5.1
    simple-term-menu

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    telliot-feeds  = telliot_feeds.cli.main:main
