[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=telliot_feeds
version = attr: telliot_feeds.__version__
author=Tellor Development Community
author_email=info@tellor.io
description= Tools for interacting with Tellor Protocol smart contracts.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/tellor-io/telliot-feeds
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: System :: Networking
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
license=MIT
keywords=
    oracle
    ethereum
    blockchain


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    tox
    tox-travis
install_requires =
    aiohttp==3.8.3
    aiosignal==1.2.0
    async-timeout==4.0.2
    attrs==22.1.0
    base58==2.1.1
    bitarray==2.6.0
    certifi==2022.9.24
    chained-accounts==0.0.1
    charset-normalizer==2.1.1
    clamfig==0.1.3
    click==8.1.3
    cytoolz==0.12.0
    eth-abi==2.2.0
    eth-account==0.5.9
    eth-hash==0.5.0
    eth-keyfile==0.5.1
    eth-keys==0.3.4
    eth-retry==0.1.13
    eth-rlp==0.2.1
    eth-typing==2.3.0
    eth-utils==1.9.5
    frozenlist==1.3.1
    hexbytes==0.3.0
    idna==3.4
    ipfshttpclient==0.8.0a2
    jsonschema==3.2.0
    lru-dict==1.3.0
    multiaddr==0.0.9
    multicall==0.7.0
    multidict==6.0.2
    netaddr==0.8.0
    parsimonious==0.8.1
    protobuf==3.20.3
    pycryptodome==3.15.0
    pyrsistent==0.19.2
    python-dateutil==2.8.1
    python-dotenv==0.21.0
    pytz==2024.1
    PyYAML==6.0
    requests==2.28.1
    rlp==2.0.1
    simple-term-menu==1.5.2
    six==1.16.0
    telliot-core==0.3.7
    toolz==0.12.0
    typing_extensions==4.4.0
    urllib3==1.26.12
    varint==1.0.2
    web3==5.28.0
    websockets==9.1
    yarl==1.8.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    telliot = telliot_feeds.cli.main:main
