[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name=telliot_feeds
version = attr: telliot_feeds.__version__
author=Tellor Development Community
author_email=info@tellor.io
description= Tools for interacting with Tellor Protocol smart contracts.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/tellor-io/telliot-feeds
license_files = LICENSE
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: System :: Networking
    Topic :: Office/Business :: Financial
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12
license=MIT
keywords=
    oracle
    ethereum
    blockchain


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    tox
    tox-travis
install_requires =
    aiohttp==3.11.13
    aiosignal==1.3.2
    async-timeout==5.0.1
    attrs==25.1.0
    bitarray==3.1.0
    certifi==2025.1.31
    chained-accounts==0.0.1
    charset-normalizer==3.4.1
    clamfig==0.1.3
    click==8.1.8
    cytoolz==1.0.1
    eth-abi==5.2.0
    eth-account==0.11.3
    eth-hash==0.7.1
    eth-keyfile==0.9.1
    eth-keys==0.6.1
    eth-retry==0.2.1
    eth-rlp==1.0.1
    eth-tester==0.11.0b2
    eth-typing==4.4.0
    eth-utils==4.1.1
    frozenlist==1.5.0
    hexbytes==0.3.1
    idna==3.10
    ipfshttpclient==0.8.0a2
    jsonschema==4.23.0
    lru-dict==1.2.0
    multiaddr==0.0.9
    multicall==0.10.0
    multidict==6.1.0
    netaddr==0.8.0
    parsimonious==0.10.0
    protobuf==5.29.3
    pycryptodome==3.21.0
    pyrsistent==0.19.2
    python-dateutil==2.9.0.post0
    python-dotenv==1.0.1
    pytz==2025.1
    PyYAML==6.0.2
    requests==2.32.3
    rlp==4.1.0
    simple-term-menu==1.6.6
    six==1.17.0
    telliot-core==0.3.8
    toolz==1.0.0
    typing_extensions==4.12.2
    urllib3==2.3.0
    varint==1.0.2
    web3 >= 6, < 7
    websockets==13.1
    yarl==1.18.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    telliot = telliot_feeds.cli.main:main
